# leptos-sync

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  COMPARISON_WITH_ZERO.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_SUMMARY_v0.9.0.md  default.nix  docker-compose.yml  package.json  playwright.config.ts  shell.nix
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: api-docs.yml  ci.yml  comprehensive-tests.yml  dependency-updates.yml  deploy.yml  enhanced-ci.yml  release.yml
benches/: sync_performance.rs
deployment/: Dockerfile.server  docker-compose.yml
deployment/kubernetes/: websocket-server.yaml
deployment/monitoring/: prometheus.yml
docs/: COLLABORATIVE_DEMOS.md  COMPARISON_WITH_JAVASCRIPT_LIBRARIES.md  IMPLEMENTATION_SUMMARY.md  LEPTOS_WS_PRO_MIGRATION_PLAN.md  README.md  ROADMAP_SUMMARY.md  ROADMAP_TO_V1.md  ROADMAP_VISUAL.md  api-reference.md  architecture.md  deployment-operations.md  design.md  devtools-guide.md  getting-started.md  implementation-plan.md  performance-analysis.md  testing-strategy.md
docs/api/: README.md  rest-api.yaml  websocket-api.yaml
docs/dependency-management/: high-risk-migration-plan.md  high-risk-migration-summary.md  leptos-0.9-breaking-changes.md  leptos-0.9-migration-testing.md  medium-risk-update-summary.md  medium-risk-update-testing.md  update-summary.md  version-pinning-strategy.md
docs/guides/: developer-guide.md  effort-estimates.md  feature-flags-configuration.md  monitoring-reliability-configuration.md  project-setup.md  security-privacy.md  webrtc-integration-strategy.md  webrtc-quick-reference.md  webrtc-technical-decision-matrix.md
docs/remediation/: 01-compilation-fixes.md  02-websocket-transport.md  03-indexeddb-storage.md  04-file-refactoring.md  05-api-contracts.md  06-test-coverage.md  07-dependency-updates.md  README.md  dependency-audit.md  known-issues-v0.9.0.md  pre-release-checklist.md  release-readiness-v0.9.0.md  release-summary.md
docs/status/: MVP_COMPLETE.md  NETWORK_FIRST_MVP_README.md  NETWORK_FIRST_MVP_STATUS.md  PROJECT_STATUS_REALISTIC.md  STORAGE_FIRST_MVP_COMPLETE.md
docs/testing/: coverage-report.md
examples/: websocket-server.rs
examples/advanced_crdt_demo/: Cargo.toml
examples/collaborative_todo/: Cargo.toml
examples/collaborative_todo/src/: main.rs
examples/custom_crdt_demo/: Cargo.toml
examples/devtools_demo/: Cargo.toml
examples/document_editor_demo/: Cargo.toml  (+2 more)
examples/end_to_end_sync_demo/: Cargo.toml
examples/end_to_end_sync_demo/src/: main.rs
examples/project_manager_demo/: Cargo.toml  README.md  index.html
examples/project_manager_demo/src/: lib.rs  main.rs  project_manager.rs  tests.rs
examples/text_editor_demo/: Cargo.toml  README.md  index.html
examples/text_editor_demo/src/: lib.rs  main.rs  tests.rs  text_editor.rs
leptos-sync-components/: Cargo.toml
leptos-sync-components/src/: lib.rs  resolver.rs  status.rs  sync_status.rs
leptos-sync-components/src/provider/: mod.rs
leptos-sync-core/: Cargo.toml  README.md
leptos-sync-core/benches/: crdt_benchmarks.rs
leptos-sync-core/proptest-regressions/: crdt.txt
leptos-sync-core/src/: collection.rs  crdt.rs  error.rs  lib.rs  memory_pool.rs  query.rs  serialization.rs  wasm_tests.rs
leptos-sync-core/src/crdt/: advanced.rs  builder.rs  crdt_basic.rs  graph.rs  list.rs  mod.rs  tree.rs
leptos-sync-core/src/crdt/advanced/: common.rs  dag.rs  lseq.rs  mod.rs  rga.rs  yjs_tree.rs
leptos-sync-core/src/crdt/basic/: counter.rs  lww_map.rs  lww_register.rs  mod.rs  replica_id.rs  traits.rs
leptos-sync-core/src/crdt/graph/: add_wins.rs  algorithms.rs  edge.rs  mod.rs  remove_wins.rs  vertex.rs
leptos-sync-core/src/crdt/tree/: add_wins.rs  config.rs  error.rs  mod.rs  remove_wins.rs  types.rs
leptos-sync-core/src/devtools/: mod.rs
leptos-sync-core/src/error/: mod.rs  retry.rs
leptos-sync-core/src/reliability/: backup_restore.rs  circuit_breaker.rs  data_integrity.rs  error_recovery.rs  health_checks.rs  mod.rs  monitoring.rs
leptos-sync-core/src/reliability/data_integrity/: checksum.rs  corruption.rs  mod.rs  types.rs  version.rs
leptos-sync-core/src/reliability/error_recovery/: circuit_breaker.rs  mod.rs  retry_policy.rs  types.rs
leptos-sync-core/src/reliability/monitoring/: alerts.rs  config.rs  health.rs  metrics.rs  mod.rs
leptos-sync-core/src/security/: authentication.rs  compression.rs  encryption.rs  gdpr.rs  hashing.rs  mod.rs  tests.rs
leptos-sync-core/src/security/authentication/: config.rs  crypto.rs  manager.rs  mod.rs  types.rs  validation.rs
leptos-sync-core/src/storage/: indexed.rs  indexeddb.rs  indexeddb_tests.rs  memory.rs  mod.rs  tests.rs
leptos-sync-core/src/storage/indexeddb/: connection.rs  crdt_store.rs  errors.rs  migrations.rs  mod.rs  operations.rs  tests.rs
leptos-sync-core/src/sync/: conflict.rs  end_to_end.rs  engine.rs  mod.rs  realtime.rs
leptos-sync-core/src/transport/: compatibility_layer.rs  enhanced_features_tests.rs  hybrid_transport_impl.rs  hybrid_transport_tests.rs  leptos_ws_pro_tests.rs  leptos_ws_pro_transport.rs  memory.rs  message_protocol.rs  mod.rs  multi_transport.rs  real_websocket_tests.rs  server_compatibility_tests.rs  websocket.rs  websocket_client.rs  websocket_integration.rs  websocket_integration_tests.rs  websocket_tests.rs
leptos-sync-core/src/validation/: mod.rs  schema_validator.rs
leptos-sync-examples/: Cargo.toml
leptos-sync-examples/src/: main.rs  real_time_demo.rs  websocket_server.rs
leptos-sync-macros/: Cargo.toml
leptos-sync-macros/src/: lib.rs
migration-guides/: leptos-0.9-migration.md
scripts/: build-wasm.sh  build.sh  comprehensive-testing.sh  migrate-sqlx.sh  release.sh  rollback-high-risk-updates.sh  rollback-medium-risk-updates.sh  test-all.sh  test.sh
tests/: README.md
tests/integration/: Cargo.toml  end_to_end_sync.rs  leptos_0_9_migration.rs  medium_risk_updates.rs  multi_replica_sync.rs  sync_workflow.rs
(+55 files in other folders)
