[workspace]
members = [
    "leptos-sync-core",
    "leptos-sync-macros", 
    "leptos-sync-components",
    "leptos-sync-examples"
]

resolver = "2"

[workspace.dependencies]
leptos = "0.8"
leptos-ws = "0.8"
web-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
redis = { version = "0.23", features = ["tokio-comp"] }
prometheus = "0.13"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Local-first, offline-capable data synchronization for Leptos applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/leptos-sync"
keywords = ["leptos", "sync", "crdt", "local-first", "offline"]
categories = ["web-programming", "asynchronous", "data-structures"]
