[package]
name = "leptos-sync-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Leptos components for synchronization UI"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos-sync-core = { version = "0.3.1", path = "../leptos-sync-core" }
