[package]
name = "leptos-sync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core synchronization library for Leptos applications"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
leptos.workspace = true
leptos-ws.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = "0.5"
wasm-bindgen-test = "0.3"
