[package]
name = "leptos-sync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core synchronization library for Leptos applications"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos.workspace = true
leptos_ws.workspace = true

web-sys.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.47.1", features = ["rt", "macros", "sync", "time"], default-features = false }
uuid = { version = "1.18.1", features = ["v4", "js", "serde"] }
thiserror.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
async-trait.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-events = "0.2"
gloo-timers = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros", "sync", "net", "time"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = "0.5"
wasm-bindgen-test = "0.3"

[[bench]]
name = "crdt_benchmarks"
harness = false
