[package]
name = "leptos-sync-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core synchronization library for Leptos applications"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
encryption = ["aes-gcm", "ring"]
compression = ["flate2", "lz4"]
metrics = ["prometheus"]
websocket = ["leptos-ws-pro", "tokio-tungstenite", "futures-util"]
indexeddb = ["idb"]
validation = ["jsonschema"]

[dependencies]
leptos.workspace = true
leptos_ws.workspace = true
leptos-ws-pro = { workspace = true, optional = true }

web-sys.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
flate2 = { version = "1.0", optional = true }
parking_lot = "0.12"
tokio = { version = "1.47.1", features = [
    "rt",
    "macros",
    "sync",
    "time",
], default-features = false }
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1.10", features = ["v4", "js", "serde"] }
thiserror.workspace = true
jsonschema = { version = "0.18", optional = true }
tracing.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
async-trait.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
gloo-net = { version = "0.6", features = ["websocket"] }
gloo-events = "0.2"
gloo-timers = "0.2"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
aes-gcm = { version = "0.10", optional = true }
rand = "0.8"
base64 = "0.22"
ring = { version = "0.17", optional = true }
lz4 = { version = "1.24", optional = true }
prometheus = { version = "0.13", optional = true }
idb = { version = "0.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = [
    "rt",
    "macros",
    "sync",
    "net",
    "time",
] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
criterion = "0.5.1"
wasm-bindgen-test = "0.3.45"
fastrand = "2.0"

[[bench]]
name = "crdt_benchmarks"
harness = false
