[package]
name = "leptos-sync-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Example applications using Leptos-Sync"
license.workspace = true
repository.workspace = true

[dependencies]
leptos.workspace = true
leptos-sync-core = { path = "../leptos-sync-core" }
leptos-sync-components = { path = "../leptos-sync-components" }
