[package]
name = "leptos-sync-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Derive macros for Leptos-Sync"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
