[package]
name = "collaborative-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-sync-core = { path = "../../leptos-sync-core" }
leptos-sync-components = { path = "../../leptos-sync-components" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
console_error_panic_hook = "0.1"

[build-dependencies]
leptos = { version = "0.8", features = ["csr"] }

[[bin]]
name = "collaborative-todo"
path = "src/main.rs"
