[package]
name = "end_to_end_sync_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "end_to_end_sync_demo"
path = "src/main.rs"

[dependencies]
leptos-sync-core = { path = "../../leptos-sync-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
