[package]
name = "project_manager_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "project_manager_demo"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-sync-core = { workspace = true, path = "../../leptos-sync-core" }
leptos-sync-components = { workspace = true, path = "../../leptos-sync-components" }
web-sys.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
gloo-timers = "0.2"
gloo-events = "0.2"
gloo-utils = "0.2"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"
