[package]
name = "leptos-sync-integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "leptos_sync_integration_tests"
path = "sync_workflow.rs"

[dependencies]
leptos-sync-core = { path = "../../leptos-sync-core" }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
